<resources>
    <string name="app_name">Chapp!</string>

    <string name="hello_world">Hello world!</string>

    <string name="enter_mail">Enter your email</string>
    <string name="enter_pass">Enter your password</string>
    <string name="enter_nick">Enter desired nickname</string>
    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_save">Save</string>
    <string name="btn_register">Register user</string>
    <string name="tip_signup">Not registered? Sign up here</string>string
    <string name="tip_login">Already registered? Sign in here</string>string
    <string name="header_login">User login</string>
    <string name="header_register">Register user</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="add_channel">Add channel..</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_friends">Friends</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_conversations">Conversations</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_manage">Manage</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_logout">Logout</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Friends</item>
        <item>Notifications</item>
        <item>Conversations</item>
        <item>Profile</item>
        <item>Manage</item>
        <item>Settings</item>
        <item>About Us</item>
        <item>Logout</item>
    </string-array>
    <string name="title_activity_login_test">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_chat">Chapp!</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
