<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_conversations"
            android:title="@string/nav_conversations" />
        <item
            android:id="@+id/nav_friends"
            android:title="@string/nav_friends" />
    </group>

    <item
        android:id="@+id/nav_manage"
        android:title="@string/nav_manage">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
